<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/localNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_name"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"/>

        <AutoCompleteTextView
            android:id="@+id/localName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp" />

        <TextView
            android:id="@+id/categoryLocalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_category"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"/>

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20sp" />

        <TextView
            android:id="@+id/globalPositionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global_position"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="30sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"/>

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:layout_marginHorizontal="20sp"
            android:layout_marginTop="10sp"/>

        <Button
            android:id="@+id/checkinButton"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            android:text="@string/check_in"
            android:layout_gravity="center"
            android:layout_marginVertical="40sp"
            android:layout_marginHorizontal="20sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>